--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,31 @@
-name: Manual Greeting
+
+name: Time-based Greeting
 
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'あなたの名前を入力してください'
-        required: true
-        default: 'GitHubユーザー'
+  workflow_dispatch:
+    inputs:
+      time_of_day:
+        description: '時間帯を選んでください'
+        required: true
+        type: choice
+        options:
+          - 朝
+          - 昼
+          - 夜
 
 jobs:
-  greet:
-    runs-on: ubuntu-latest
+  greet:
+    runs-on: ubuntu-latest
 
-    steps:
-      - name: Greet the user
-        run: echo "こんにちは、${{ github.event.inputs.name }} さん！"
+    steps:
+      - name: 挨拶を表示
+        run: |
+          if [ "${{ github.event.inputs.time_of_day }}" = "朝" ]; then
+            echo "☀️ おはようございます！"
+          elif [ "${{ github.event.inputs.time_of_day }}" = "昼" ]; then
+            echo "🌞 こんにちは！"
+          elif [ "${{ github.event.inputs.time_of_day }}" = "夜" ]; then
+            echo "🌙 こんばんは！"
+          else
+            echo "🤖 不明な時間帯です"
+          fi
